--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,3 +9,11 @@ html, body, #__next {
 #__next {
     @apply flex flex-row;
 }
+
+h1 {
+    @apply text-2xl font-bold p-0 m-0 border-b border-black;
+}
+
+nav a {
+    @apply btn btn-primary btn-sm rounded-none w-full;
+}
